[add] test dubbo server